Fix selkey and keyname declarations in cin template.
From http://www.yale.edu/chinesemac/pages/input_methods.html#cin

  - selkey defines keys used to select candidates.
  - keyname definitions map keys typed to characters displayed in the
    inline/input window.

--- a/templates/cin.erb
+++ b/templates/cin.erb
@@ -2,10 +2,10 @@
 %cname <%= name %>
 %ename <%= name %>
 %encoding UTF-8
-%selkey @\abcdefghijklmnopqrstuvwxyz
-%endkey 
+%selkey 123456789
+%endkey
 %keyname begin
-<% notation_to_unicode.keys.sort.each do |latex| %><%= latex %> <%= notation_to_unicode[latex] %>
+<% [*('0'..'9'), *('a'..'z')].each do |c| %><%= c %> <%= c %>
 <% end %>%keyname end
 %chardef begin
 <% notation_to_unicode.keys.sort.each do |latex| %><%= latex %> <%= notation_to_unicode[latex] %>
